--- a/Rektor_2017/Zakljucak/Zakljucak.tex
+++ b/Rektor_2017/Zakljucak/Zakljucak.tex
@@ -162,19 +162,18 @@
 \usepackage{lscape}
 \begin{document}
 
-U ovom radu predstavljeno je projektiranje i izrada laboratorijskog modela letjelice upravljane novim konceptom upravljanja predstavljenim u \cite{haus1}. Potreba za novim konceptom upravljanja proizlazi iz zahtjeva koji su postavljeni projektom MORUS, čiji je osnovni cilj izrada autonomnog sustava za maritimnu sigurnost i nadzor stanja okoliša. Autonomni sustav kojeg čine autonomno podvodno vozilo i autonomno zračno vozilo, ima za zadatak koordiniranim radom obaviti razne podvodne inspekcije u okruženjima opasnima za čovjeka, prilikom havarija i sl. Predloženo rješenje letjelice bazirano je na primjeni benzinskih motora, dok je upravljanje zasnovano na promjeni centra mase letjelice, pomičnim masama na krakovima letjelice. 
+U ovom radu predstavljeno je projektiranje i izrada laboratorijskog modela letjelice upravljane novim konceptom upravljanja predstavljenim u \cite{haus1}. Potreba za novim konceptom upravljanja proizlazi iz zahtjeva koji su postavljeni projektom MORUS, čiji je osnovni cilj izrada autonomnog sustava za maritimnu sigurnost i nadzor stanja okoliša. Autonomni sustav kojeg čine autonomno podvodno vozilo (AUV) i autonomno zračno vozilo (UAV), ima za zadatak koordiniranim radom obaviti razne podvodne inspekcije u okruženjima opasnima za čovjeka, prilikom havarija i sl. Predloženo rješenje letjelice bazirano je na primjeni benzinskih motora, dok je upravljanje zasnovano na promjeni centra mase letjelice, pomičnim masama na krakovima letjelice. 
 
 
 \medskip
 
-Uz sve prednosti koje novi koncept letjelice donosi, dimenzije same MORUS letjelice s benzinskim motorima značajno otežavaju testiranje i verificiranje novog koncepta upravljanja. Kako bi olakšali navedeni proces potrebno je bilo izraditi mali, laboratorijski model letjelice. Laboratorijski model multirotorske letjelice s pomičnim masama je izrađen modifikacijom postojeće laboratorijske letjelice \textit{ArduCopter}.  
+Uz sve prednosti koje novi koncept letjelice donosi, dimenzije same \textit{MORUS} letjelice s benzinskim motorima značajno otežavaju testiranje i verificiranje novog koncepta upravljanja. Kako bi olakšali navedeni proces potrebno je bilo izraditi mali, laboratorijski model letjelice. Laboratorijski model multirotorske letjelice s pomičnim masama izrađen je modifikacijom postojeće laboratorijske letjelice \textit{ArduCopter}.  
 
 \medskip
 U radu je predstavljen matematički model letjelice koji je osnova projektiranja sustava upravljanja. Parametri matematičkog modela su eksperimentalno utvrđeni postupkom identifikacije. Nakon identifikacije laboratorijskog modela, uslijedilo je projektiranje sustava upravlja predstavljeno člankom \cite{haus2}. Nadalje, postojeća letjelica \textit{ArduCopter} modificirana je dodavanjem kliznih mehanizama za pokretne mase. Uz modifikaciju mehaničke konstrukcije, projektirano je elektroničko sklopovlje i pripadna programska potpora. 
 
 \medskip
-DODATI JOŠ JEDAN ODLOMAK O REZULTATIMA
-Modificirana letjelica \textit{ArduCopter} postaje platforma za sve buduće algoritme upravljanja, uključujući planiranje i izvođenje trajektorija, manipulaciju objektima i sl.
+Rezultat ovog rada je funkcionalna zračna platforma za testiranje i verificiranje novog koncepta upravljanja multirotorskom letjelicom. Eksperimentalni rezultati su potvrdili isravnost novog koncepta upravljanja letjelicom. Modificirana letjelica \textit{ArduCopter} postaje platforma za sve buduće algoritme upravljanja, uključujući planiranje i izvođenje trajektorija, manipulaciju objektima i sl.
 
 
 \end{document}
