--- a/Rektor_2017/CAD/CAD.tex
+++ b/Rektor_2017/CAD/CAD.tex
@@ -163,7 +163,7 @@
 \usepackage{lscape}
 \begin{document}
 
-U ovom poglavlju opisana je mehanička konstrukcija letjelice. Osnova je postojeća laboratorijska letjelica  \textit{ArduCopter}. Letjelica  \textit{ArduCopter} standarnog je dizajna, s četiri pogonska \textit{beskolektorska DC} motora s pripadnim  elektroničkim upravljačima brzine(\textit{ESC - eng. Electronic Speed Control}). Zbog jednostavnog i modularnog dizajna, letjelica je prikladna platforma za razne promjene i proširenja raznim upravljačkim uređajima, senzorima i aktuatorima. U \textit{LARICS} laboratoriju trenutno postoji nekoliko modela letjelica ovog tipa koje se koriste za većinu eksperimenata. Dizajn i veličina letjelice prikladna je za većinu eksperimenata koji se provode u laboratoriju, uključujući planiranje i izvođenje trajektorija u prostoru, manipulaciju objekata i drugo. Upravo zato odlučeno je modificirati jednu od postojećih konstrukcija te izraditi platformu za eksperimentalno testiranje novog koncepta upravljanja višerotorskom letjelicom. Glavna modifikacija odnosi se na dizajniranje i izradu mehanizma kojim će se omogućiti pomak mase na kraku. Također, potrebno je smjestiti sve ostale komponente nužne za upravljanje letjelicom, poput kontrolera leta i upravljačkog sklopovlja pomičnih masa. Za izradu dizajna je korišten CAD alat. Konačni 3D izgled modificirane letjelice prikazan je Slikom \ref{Slika:3D_drone_final}.
+U ovom poglavlju opisana je mehanička konstrukcija letjelice. Osnova je postojeća laboratorijska letjelica  \textit{ArduCopter}. Letjelica  \textit{ArduCopter} standarnog je dizajna, s četiri pogonska \textit{beskolektorska DC} motora s pripadnim  elektroničkim upravljačima brzine(\textit{ESC - eng. Electronic Speed Control}). Zbog jednostavnog i modularnog dizajna, letjelica je prikladna platforma za razne promjene i proširenja raznim upravljačkim uređajima, senzorima i aktuatorima. U \textit{LARICS} laboratoriju trenutno postoji nekoliko modela letjelica ovog tipa koje se koriste za većinu eksperimenata. Dizajn i veličina letjelice prikladna je za većinu eksperimenata koji se provode u laboratoriju, uključujući planiranje i izvođenje trajektorija u prostoru, manipulaciju objekata i drugo. Upravo zato odlučeno je modificirati jednu od postojećih konstrukcija te izraditi platformu za eksperimentalno testiranje novog koncepta upravljanja višerotorskom letjelicom. Glavna modifikacija odnosi se na dizajniranje i izradu mehanizma kojim će se omogućiti pomak mase na kraku. Također, potrebno je smjestiti sve ostale komponente nužne za upravljanje letjelicom, poput kontrolera leta i upravljačkog sklopovlja pomičnih masa. Za izradu dizajna korišten je CAD alat. Konačni 3D izgled modificirane letjelice prikazan je Slikom \ref{Slika:3D_drone_final}.
 
 \begin{figure}[H]
 	\centering
