Added summary, made small changes in literature

--- a/Rektor_2017/Literatura/Literatura.tex
+++ b/Rektor_2017/Literatura/Literatura.tex
@@ -164,16 +164,17 @@
 
 \bibliographystyle{plain}
 \begin{thebibliography}{9}
-	
-\bibitem{github}
-  \emph{GitHub repozitorij}, https://github.com/mbedekovic/stepperControl,
-  2017.
  
 \bibitem{cpp}
  J. Šribar, B. Motik,
  \emph{Demistificirani C++},
  Element,
  Zagreb 2014.
+ 
+ \bibitem{px4_docu}
+ L. Meier et al.,
+ \emph{PX4 Development Guide}, https://dev.px4.io/,
+ 27. 4. 2017.
  
 \bibitem{mato}
   M. Baotić,
@@ -247,9 +248,6 @@
   Kigen,
   Zagreb 2005.
   
-\bibitem{px4_docu}
-  \emph{PX4 Development Guide}, https://dev.px4.io/,
-  2017.
 
   
   
