--- a/Rektor_2017/Summary/Summary.tex
+++ b/Rektor_2017/Summary/Summary.tex
@@ -161,7 +161,14 @@
 \usepackage{subcaption}
 \usepackage{lscape}
 \begin{document}
+	
+\noindent Authors: Matija Bedeković, Bruno Marić, Martina Tomić \newline
 
-Summary
+\noindent Title: Design and development of a small multirotor aerial vehicle with moving mass control	\newline
 
+In this paper the design and creation of a laboratory model quadrotor with moving mass control is presented. Novel concept of quadrotor control was introduced in MORUS project which presents the design of unmanned system for maritime security and environmental monitoring. Classic quadrotor with electric motors was replaced with new quadrotor powered by internal combustion engines using the shift in the center of gravity to control the attitude of the quadrotor. For the purposes of testing and verifying the new concept of attitude control, small scale laboratory model was build. This paper presents modifications made to the existing ArduCopter quadrotor comprising of mechanical modifications, design and fabrication of electronic hardware and software design. Modified quadcopter was described with identified mathematical model as a basis for control system design. Modified quadrotor was tested in laboratory environment.
+
+\medskip
+
+\noindent Key words: multirotor aerial vehicle, unmanned aerial vehicle, control system, moving mass control
 \end{document}
