--- a/Rektor_2017/Sazetak/Sazetak.tex
+++ b/Rektor_2017/Sazetak/Sazetak.tex
@@ -165,7 +165,7 @@
 
 \noindent Ime rada: Dizajn i razvoj male multirotorske letjelice s upravljanjem zasnovanim na pomičnim masama\\
 
-Ovim radom predstavljeno je projektiranje i izrada laboratorijskog modela letjelice upravljanje novim konceptom upravljanja. Potreba za novim konceptom proizlazi iz zahtjeva projekta MORUS, koji obuhvaća izradu autonomnog sustava za maritimnu sigurnost i nadzor stanja okoliša. Klasična multirotorska letjelica s električnim motorima zamjenjena je novom letjelicom pogonjenom benzinskim motorima i upravljanom promjenom centra mase. Zbog testiranja i verificiranja novog koncepta letjelice, izrađen je laboratorijski model, koji predstavlja platformu za sva daljnja istraživanja. U radu je predstavljena modifikacija postojeće letjelice \textit{Arducopter}, koja obuhvaća dodavanje mehanizama pokretnih masa, projektiranje i izradu elektroničkog sklopovlja i programske potpore. Modificirani model identificiran je matematičkim modelom, koji predstavlja osnovu za projektiranje sustava upravnja. Izrađeni model je eksperimentalno testiran u laboratorijskim uvjetima.
+Ovim radom predstavljeno je projektiranje i izrada laboratorijskog modela letjelice upravljanje novim konceptom upravljanja. Potreba za novim konceptom proizlazi iz zahtjeva projekta MORUS, koji obuhvaća izradu autonomnog sustava za maritimnu sigurnost i nadzor stanja okoliša. Klasična multirotorska letjelica s električnim motorima zamijenjena je novom letjelicom pogonjenom benzinskim motorima i upravljanom promjenom centra mase. Zbog testiranja i verificiranja novog koncepta letjelice, izrađen je laboratorijski model, koji predstavlja platformu za sva daljnja istraživanja. U radu je predstavljena modifikacija postojeće letjelice \textit{ArduCopter}, koja obuhvaća dodavanje mehanizama pokretnih masa, projektiranje i izradu elektroničkog sklopovlja i programske potpore. Modificirani model identificiran je matematičkim modelom, koji predstavlja osnovu za projektiranje sustava upravljanja. Izrađeni model je eksperimentalno testiran u laboratorijskim uvjetima.
 
 \medskip
 
