Hardverska struktura u Elektroničko sklopovlje

--- a/Rektor_2017/rektor_2017.tex
+++ b/Rektor_2017/rektor_2017.tex
@@ -251,7 +251,7 @@ Zagreb, \the\year
 \input{CAD/CAD}
 
 \newpage
-\section{Hardverska struktura}
+\section{Elektroničko sklopovlje}
 \input{Hardware/Hardware}
 
 \newpage
