Add some figures to CAD.

--- a/Rektor_2017/CAD/CAD.tex
+++ b/Rektor_2017/CAD/CAD.tex
@@ -322,14 +322,6 @@ Nakon pripreme svih dijelova, slijedi montaža. Slikom \ref{fig:arm_assembly} pr
 \end{figure}
 
 
-Nakon montaže svih dijelova, modificirana letjelica \textit{ArduCopter} postavljena je na stalak, s omogućenim jednim stupnjem slobode. Konačni izgled letjelice postavljene na stalak prikazan je Slikom \ref{fig:arm_assembly_Real}.
-
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.9\textwidth]{figures/letjelica.png}
-	\caption{Prikaz laboratorijskog modela letjelice s pomičnom masom}
-	\label{fig:arm_assembly_Real}
-\end{figure}
 
 
 
@@ -372,7 +364,28 @@ Iznad upravljačkog sklopovlja, nalazi se sloj za daljnja proširenja. Daljnja p
 \end{figure}
 
 \subsection{Prikaz rezalizacije mehaničke konstrukcije}
-OVDJE STAVITI FOTOGRAFIJE STVARNE LETJELICE
+Nakon izrade svih svih dijelova, uslijedila je montaža. Modificirana letjelica \textit{ArduCopter} postavljena je na stalak, s omogućenim jednim stupnjem slobode. Konačni izgled letjelice postavljene na stalak prikazan je Slikom \ref{fig:arm_assembly_Real}. Na Slici \ref{fig:drone_final_2} prikazana je letjelica s odmakom iznosa $0.2 rad$ iz središnjeg položaja. Realizacija mehanizma pokretne mase prikazana je Slikom \ref{fig:drone_final_3}.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.9\textwidth]{figures/letjelica.png}
+	\caption{Prikaz laboratorijskog modela letjelice s pomičnom masom - središnji položaj}
+	\label{fig:arm_assembly_Real}
+\end{figure}
+
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.9\textwidth]{figures/letjelica2.png}
+	\caption{Prikaz laboratorijskog modela letjelice s pomičnom masom - odmak $0.2 rad$}
+	\label{fig:drone_final_2}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.9\textwidth]{figures/letjelica3.png}
+	\caption{Prikaz laboratorijskog modela letjelice s pomičnom masom}
+	\label{fig:drone_final_3}
+\end{figure}
 
 
 \end{document}
