--- a/Rektor_2017/Uvod/Uvod.tex
+++ b/Rektor_2017/Uvod/Uvod.tex
@@ -166,7 +166,7 @@ Robotika je grana tehnologije koja se bavi dizajnom, izradom, upravljanjem i pri
 
 \medskip
 
-Potencijalne primjene bespilotnih letjelica dijele se na dvije grupe, vojne i civilne. Prva grupa, \textit{vojne aplikacije}, uključuje akcije kao što su ciljanje and distrakcija, praćenje i izviđanje, sudjelovanje u borbi i logističke primjene, dok druga grupa, \textit{civilne aplikacije}, uključuje akcije kao što su nadgledanje prometa i vremena, vatrogastvo, poljoprivreda, traženje i spašavanje, te istraživanje i razvoj. \cite{urs} Teži se razvoju autonomnih robotskih sustava, sposobnih za rad u izrazito dinamičnim i nedeterminističkim okruženjima.
+Potencijalne primjene bespilotnih letjelica dijele se na dvije grupe, vojne i civilne. Prva grupa, \textit{vojne aplikacije}, uključuje akcije kao što su ciljanje and distrakcija, praćenje i izviđanje, sudjelovanje u borbi i logističke primjene, dok druga grupa, \textit{civilne aplikacije}, uključuje akcije kao što su nadgledanje prometa i vremena, vatrogastvo, poljoprivreda, traženje i spašavanje, te istraživanje i razvoj \cite{urs}. Teži se razvoju autonomnih robotskih sustava, sposobnih za rad u izrazito dinamičnim i nedeterminističkim okruženjima.
 
 \medskip
 
@@ -177,7 +177,7 @@ Potencijalne primjene bespilotnih letjelica dijele se na dvije grupe, vojne i ci
 	\label{fig:koord}
 \end{figure}
 
-Ideja ovog rada proizlazi iz želje za razvojem jednog takvog autonomnog heterogenog robotskog sustava, sastavljenog od bespilotne letjelice i bespilotne ronilice, kao što je prikazano na Slici \ref{fig:koord}. Ovakav robotski sustav služio bi u misijama izviđanja na moru. Znanstvenici sa Fakulteta elektrotehnike i računarstva u Zagrebu, na Zavodu za Automatiku i Računalno Inženjerstvo u Laboratoriju za Robotiku i Inteligentne Sustave Upravljanja, pod vodstvom prof. dr. sc. Stjepana Bogdana rade na razvoju jednog ovakvog sustava na projektu pod imenom MORUS. Cilj ovog robotskog sustava bila bi koordinirana akcija između letjelice i ronilice, u kojem bi se ronilica u bazi na obali prikvačila za letjelicu, koja bi ju potom prevezla do mjesta na kojoj se obavlja određena misija te ju pustila u more i zatim se vratila u bazu. Po završetku misije letjelica bi otišla po ronilicu, izvukla ju iz mora te vratila na početni položaj, odnozno u bazu \cite{haus2}.
+Ideja ovog rada proizlazi iz želje za razvojem jednog takvog autonomnog heterogenog robotskog sustava, sastavljenog od bespilotne letjelice i bespilotne ronilice, kao što je prikazano na Slici \ref{fig:koord}. Ovakav robotski sustav služio bi u misijama izviđanja na moru. Znanstvenici s Fakulteta elektrotehnike i računarstva u Zagrebu, na Zavodu za Automatiku i Računalno Inženjerstvo u Laboratoriju za Robotiku i Inteligentne Sustave Upravljanja, pod vodstvom prof. dr. sc. Stjepana Bogdana rade na razvoju jednog ovakvog sustava na projektu pod imenom MORUS. Cilj ovog robotskog sustava bila bi koordinirana akcija između letjelice i ronilice, u kojem bi se ronilica u bazi na obali prikvačila za letjelicu, koja bi ju potom prevezla do mjesta na kojoj se obavlja određena misija te ju pustila u more i zatim se vratila u bazu. Po završetku misije letjelica bi otišla po ronilicu, izvukla ju iz mora te vratila na početni položaj, odnozno u bazu \cite{haus2}.
 
 
 \medskip
@@ -187,6 +187,6 @@ Intuitivno je jasno kako su na ovakvu letjelicu postavljeni strogi uvjeti vezani
 
 \medskip
 
-Benzinski motori, unatoč svojim prednostima, otežavaju testiranje jednog ovakvog sustava. Za pokretanje kompleksnog sustava ovih razmjera potrebna je pomno planirana i vremenski dugotrajna priprema. Sami benzinski motori stvaraju buku i ispušne plinove te zahtijevaju pokretanje na otvorenom. U tu svrhu javlja se potreba za izradom laboratorijske makete letjelice, na kojoj će se testirati svi algoritmi razvijeni za veliku letjelicu. Ovaj rad stoga nastoji doprinijeti dizajnu i razvoju jedne takve letjelice te primijeniti i testirati novi koncept upravljanja bespilotnom letjelicom zasnovan na promjeni centra mase letjelice. 
+Benzinski motori, unatoč svojim prednostima, otežavaju testiranje jednog ovakvog sustava. Za pokretanje kompleksnog sustava ovih razmjera potrebna je pomno planirana i vremenski dugotrajna priprema. Sami benzinski motori stvaraju buku i ispušne plinove te zahtijevaju pokretanje na otvorenom. U tu svrhu javlja se potreba za izradom laboratorijske makete letjelice, na kojoj će se testirati svi algoritmi razvijeni za veliku letjelicu. Ovaj rad stoga nastoji doprinijeti dizajnu i razvoju laboratorijske mekete letjelice te primijeniti i testirati novi koncept upravljanja bespilotnom letjelicom zasnovan na promjeni centra mase letjelice. 
 
 \end{document}
